[Feat] 채팅 테스트 들여쓰기 컨벤션 정리